--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.practice_info">
+    <uses-permission android:name="android.permission.SEND_SMS"/>
    <application
         android:label="practice_info"
         android:name="${applicationName}"
