--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   package_info_plus: ^1.4.2
   device_info_plus: ^3.2.3
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
